samples/_failures_safe/1761697004_aa2a69_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf5a5e1b.c: In function ‘process_event’:
./samples/SAFE/__tmp_bf5a5e1b.c:153:20: error: missing terminating " character
  153 |             printf("Transition
      |                    ^~~~~~~~~~~
./samples/SAFE/__tmp_bf5a5e1b.c:153:13: error: expected expression at end of input
  153 |             printf("Transition
      |             ^~~~~~
./samples/SAFE/__tmp_bf5a5e1b.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf5a5e1b.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf5a5e1b.c:153:13: error: expected declaration or statement at end of input
